log
Fri 29 Mar 2024 07:15:22 PM UTC: 
 tests:  0|6
total_score: 0/70
7109416
Fri 29 Mar 2024 07:20:06 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8a513ba
Fri 29 Mar 2024 07:20:14 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f40934f
Fri 29 Mar 2024 08:11:13 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:26: error: expected ‘;’ before ‘}’ token
   49 |   return list->head->data
      |                          ^
      |                          ;
   50 | }
      | ~                         
Compilation failed
d5d4400
Fri 29 Mar 2024 08:11:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
52f3cd5
Fri 29 Mar 2024 08:13:43 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
b9d0453
Fri 29 Mar 2024 08:15:36 PM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c:89:1: error: expected identifier or ‘(’ before numeric constant
   89 | 1
      | ^
Compilation failed
c630281
Fri 29 Mar 2024 08:18:55 PM UTC: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  3|5
total_score: 15/70
96ad624
Fri 29 Mar 2024 08:25:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
c6a255f
Fri 29 Mar 2024 08:27:52 PM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
ea786d7
Fri 29 Mar 2024 08:28:37 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|5
total_score: 15/70
b5c359b
Fri 29 Mar 2024 08:29:22 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:65:38: error: expected ‘;’ before ‘return’
   65 |   list->current = list->current->next
      |                                      ^
      |                                      ;
   66 | 
   67 |   return list->current->data;
      |   ~~~~~~                              
list.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
   68 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3c2de3d
Fri 29 Mar 2024 08:29:40 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:65:38: error: expected ‘;’ before ‘}’ token
   65 |   list->current = list->current->next
      |                                      ^
      |                                      ;
   66 | 
   67 | }
      | ~                                     
list.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6cd3963
Fri 29 Mar 2024 08:30:10 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
ef9a924
Fri 29 Mar 2024 08:30:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
eb87f68
Fri 29 Mar 2024 08:31:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
cf5fb1f
Fri 29 Mar 2024 08:41:26 PM UTC: 
 list.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
137dd37
